--- a/views/index.ejs
+++ b/views/index.ejs
@@ -121,44 +121,44 @@
 						<div class="row">
 							<div class="col-md-2 col-sm-3 col-xs-6">
 								<div class="pastor">
-									<img src="images/pastor-1.jpg" alt="" class="pastor-image">
-									<h3 class="pastor-name">john Blumkin</h3>
-									<small class="date">Joined 1998</small>
+									<img src="images/G.O.jpg" alt="" class="pastor-image">
+									<h3 class="pastor-name">Rev. Festus Amadu</h3>
+									<small class="date">General Overseer</small>
 								</div>
 							</div>
 							<div class="col-md-2 col-sm-3 col-xs-6">
 								<div class="pastor">
-									<img src="images/pastor-2.jpg" alt="" class="pastor-image">
-									<h3 class="pastor-name">Ben Johnson</h3>
-									<small class="date">Joined 2001</small>
+									<img src="images/pst.sannoh.jpg" alt="" class="pastor-image">
+									<h3 class="pastor-name">Pst. Idrissa Sannoh</h3>
+									<small class="date">National Coordinator</small>
 								</div>
 							</div>
 							<div class="col-md-2 col-sm-3 col-xs-6">
 								<div class="pastor">
-									<img src="images/pastor-3.jpg" alt="" class="pastor-image">
-									<h3 class="pastor-name">Richard Star</h3>
-									<small class="date">Joined 2003</small>
+									<img src="images/pst-john.png" alt="" class="pastor-image">
+									<h3 class="pastor-name">Prophet John Blesson Rowe</h3>
+									<small class="date">Senior Pastor</small>
 								</div>
 							</div>
 							<div class="col-md-2 col-sm-3 col-xs-6">
 								<div class="pastor">
-									<img src="images/pastor-4.jpg" alt="" class="pastor-image">
-									<h3 class="pastor-name">Steven Dawkins</h3>
-									<small class="date">Joined 2005</small>
+									<img src="images/pst.musa.jpg" alt="" class="pastor-image">
+									<h3 class="pastor-name">Pst Sidique Musa</h3>
+									<small class="date">Assistance Pastor</small>
 								</div>
 							</div>
 							<div class="col-md-2 col-sm-3 col-xs-6">
 								<div class="pastor">
-									<img src="images/pastor-5.jpg" alt="" class="pastor-image">
-									<h3 class="pastor-name">Richard Star</h3>
-									<small class="date">Joined 2008</small>
+									<img src="images/finnah_koroma.jpg" alt="" class="pastor-image">
+									<h3 class="pastor-name">Evan. Finnah Koroma</h3>
+									<small class="date">Assistance Pastor</small>
 								</div>
 							</div>
 							<div class="col-md-2 col-sm-3 col-xs-6">
 								<div class="pastor">
-									<img src="images/pastor-6.jpg" alt="" class="pastor-image">
-									<h3 class="pastor-name">Steven Dawkins</h3>
-									<small class="date">Joined 2010</small>
+									<img src="images/elderABT.jpg" alt="" class="pastor-image">
+									<h3 class="pastor-name">Elder Edward AB Turay</h3>
+									<small class="date">Head Adminstrator</small>
 								</div>
 							</div>
 						</div> <!-- .row -->
@@ -179,33 +179,41 @@
 						<div class="row">
 							<div class="col-md-3 col-sm-6">
 								<div class="event">
-									<img src="images/event-1.jpg" alt="" class="event-image">
-									<h3 class="event-title"><a href="#">Nam libero tempore cum soluta nobis eligendi</a></h3>
-									<div class="event-meta"><span class="date"><i class="fa fa-calendar"></i> 02/04/2014</span><span class="location"><i class="fa fa-map-marker"></i>Los Angeles</span></div>
+									<img src="images/prayer_fasting.JPG" alt="" class="event-image">
+									<h3 class="event-title"><a href="#">21 Days Prayer and Fasting</a></h3>
+									<div class="event-meta"><span class="date"><i class="fa fa-calendar"></i> 19/10/2023</span><span class="location"><i class="fa fa-map-marker"></i>Rokupa</span></div>
 									<a href="#" class="button">Get more information</a>
 								</div>
 							</div>
 							<div class="col-md-3 col-sm-6">
 								<div class="event">
-									<img src="images/event-2.jpg" alt="" class="event-image">
-									<h3 class="event-title"><a href="">Nam libero tempore cum soluta nobis eligendi</a></h3>
-									<div class="event-meta"><span class="date"><i class="fa fa-calendar"></i> 02/04/2014</span><span class="location"><i class="fa fa-map-marker"></i>Los Angeles</span></div>
+									<img src="images/fresh_fire.JPG" alt="" class="event-image">
+									<h3 class="event-title"><a href="">Fresh Fire Convention</a></h3>
+									<div class="event-meta"><span class="date"><i class="fa fa-calendar"></i> 22/11/2023</span><span class="location"><i class="fa fa-map-marker"></i>Rokupa</span></div>
 									<a href="#" class="button">Get more information</a>
 								</div>
 							</div>
 							<div class="col-md-3 col-sm-6">
 								<div class="event">
 									<img src="images/event-3.jpg" alt="" class="event-image">
-									<h3 class="event-title"><a href="">Nam libero tempore cum soluta nobis eligendi</a></h3>
-									<div class="event-meta"><span class="date"><i class="fa fa-calendar"></i> 02/04/2014</span><span class="location"><i class="fa fa-map-marker"></i>Los Angeles</span></div>
+									<h3 class="event-title"><a href="">Childrens' Thanksgivig Service</a></h3>
+									<div class="event-meta"><span class="date"><i class="fa fa-calendar"></i> 27/11/2023</span><span class="location"><i class="fa fa-map-marker"></i>Rokupa</span></div>
 									<a href="#" class="button">Get more information</a>
 								</div>
 							</div>
 							<div class="col-md-3 col-sm-6">
 								<div class="event">
 									<img src="images/event-4.jpg" alt="" class="event-image">
-									<h3 class="event-title"><a href="">Nam libero tempore cum soluta nobis eligendi</a></h3>
-									<div class="event-meta"><span class="date"><i class="fa fa-calendar"></i> 02/04/2014</span><span class="location"><i class="fa fa-map-marker"></i>Los Angeles</span></div>
+									<h3 class="event-title"><a href="">Couples and Leaders Dinner</a></h3>
+									<div class="event-meta"><span class="date"><i class="fa fa-calendar"></i> 15/12/2014</span><span class="location"><i class="fa fa-map-marker"></i>Rokupa</span></div>
+									<a href="#" class="button">Get more information</a>
+								</div>
+							</div>
+							<div class="col-md-3 col-sm-6">
+								<div class="event">
+									<img src="images/event-4.jpg" alt="" class="event-image">
+									<h3 class="event-title"><a href="">Carol and Praise night</a></h3>
+									<div class="event-meta"><span class="date"><i class="fa fa-calendar"></i> 22/12/2023</span><span class="location"><i class="fa fa-map-marker"></i>Rokupa</span></div>
 									<a href="#" class="button">Get more information</a>
 								</div>
 							</div>
@@ -283,11 +291,11 @@
 							</div>
 						</div> <!-- .row -->
 					</div> <!-- .container -->
-				</div> <!-- #seremons -->
+				</div> <!--#seremons-->
 
 				<div id="families" class="fullwidth-block">
 					<div class="container">
-						<h2 class="section-title">Our families</h2>
+						<h2 class="section-title">Our Leaders & families</h2>
 						<p class="section-intro">Consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam quis nostrud exercitation ullamco.</p>
 
 						<div class="family-list">
