--- a/views/index.ejs
+++ b/views/index.ejs
@@ -85,28 +85,34 @@
 								<div class="feature">
 									<div class="feature-icon"><img src="images/icon-church.png" alt="" class="icon"></div>
 									<h2 class="feature-title">Who we are?</h2>
-									<p>Lorem ipsum dolor sit amet consectetur adipisicing elit sed do eiusmod tempor.</p>
+									<p>Our church is a warm and diverse community, welcoming all with open arms. 
+										We are united by our faith in Jesus Christ, committed to serving others 
+										and growing together in love.</p>
 								</div>
 							</div>
 							<div class="col-md-3 col-sm-6">
 								<div class="feature">
 									<div class="feature-icon"><img src="images/icon-candles.png" alt="" class="icon"></div>
 									<h2 class="feature-title">Believes</h2>
-									<p>Lorem ipsum dolor sit amet consectetur adipisicing elit sed do eiusmod tempor.</p>
+									<p> Our foundational beliefs are firmly rooted in the Gospel. We embrace Christ's message of love, 
+										forgiveness, and salvation, seeking to live out His teachings daily.</p>
 								</div>
 							</div>
 							<div class="col-md-3 col-sm-6">
 								<div class="feature">
 									<div class="feature-icon"><img src="images/icon-cross.png" alt="" class="icon"></div>
 									<h2 class="feature-title">Our creed</h2>
-									<p>Lorem ipsum dolor sit amet consectetur adipisicing elit sed do eiusmod tempor.</p>
+									<p>Our creed is a profound expression of our faith, echoing the values and principles 
+										derived from the Bible and the life of Jesus Christ, guiding our spiritual journey.</p>
 								</div>
 							</div>
 							<div class="col-md-3 col-sm-6">
 								<div class="feature">
 									<div class="feature-icon"><img src="images/icon-star.png" alt="" class="icon"></div>
 									<h2 class="feature-title">Love &amp; Peace</h2>
-									<p>Lorem ipsum dolor sit amet consectetur adipisicing elit sed do eiusmod tempor.</p>
+									<p> Love and peace are our guiding lights. We ardently promote Christ's love, 
+										fostering harmony and reconciliation, both within our church family and 
+										in our broader community, for the glory of God.</p>
 								</div>
 							</div>
 						</div> <!-- .row -->
@@ -116,7 +122,14 @@
 				<div id="pastors" class="fullwidth-block" data-bg-color="#4a3173">
 					<div class="container">
 						<h2 class="section-title">Meet our pastors</h2>
-						<p class="section-intro">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam dolorum accusantium in. Consequatur, optio. Dolore debitis velit corporis. Nostrum, facilis magni recusandae quaerat doloremque perferendis nulla ducimus ad labore cumque.</p>
+						<p class="section-intro">Get to know the dedicated leaders who inspire and guide our congregation, 
+							sharing their wisdom, faith, and commitment to our spiritual journey.
+							We are blessed to have a team of devoted pastors who serve as spiritual shepherds, providing guidance, 
+							support, and inspiration to our church family. Each pastor brings a unique perspective and a deep commitment 
+							to helping you on your faith journey. Learn more about their backgrounds, passions, and the wisdom they bring 
+							to our congregation. We invite you to meet our pastors and discover the caring hearts and unwavering faith that 
+							lead our community towards spiritual growth and fulfillment.
+						</p>
 
 						<div class="row">
 							<div class="col-md-2 col-sm-3 col-xs-6">
@@ -205,7 +218,7 @@
 								<div class="event">
 									<img src="images/event-4.jpg" alt="" class="event-image">
 									<h3 class="event-title"><a href="">Couples and Leaders Dinner</a></h3>
-									<div class="event-meta"><span class="date"><i class="fa fa-calendar"></i> 15/12/2014</span><span class="location"><i class="fa fa-map-marker"></i>Rokupa</span></div>
+									<div class="event-meta"><span class="date"><i class="fa fa-calendar"></i> 15/12/2023</span><span class="location"><i class="fa fa-map-marker"></i>Rokupa</span></div>
 									<a href="#" class="button">Get more information</a>
 								</div>
 							</div>
@@ -228,27 +241,27 @@
 								<h3 class="section-title">Upcoming seremons</h3>
 								<ul class="seremon-list">
 									<li>
-										<h3 class="seremon-title"><a href="#">Labore et dolore magna aliqua</a></h3>
+										<h3 class="seremon-title"><a href="#">Divine Restoration</a></h3>
 										<p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipommodo consequat.</p>
 										<div class="seremon-meta">
-											<span><i class="fa fa-calendar"></i> <strong>Date:</strong> 05/04/2014</span>
-											<span><i class="fa fa-user"></i> <strong>Pastor:</strong> John Birman</span>
+											<span><i class="fa fa-calendar"></i> <strong>Date:</strong> 05/04/2023</span>
+											<span><i class="fa fa-user"></i> <strong>Pastor:</strong> John Blesson Rowe</span>
 										</div>
 									</li>
 									<li>
-										<h3 class="seremon-title"><a href="#">Labore et dolore magna aliqua</a></h3>
+										<h3 class="seremon-title"><a href="#">Divine Restoration</a></h3>
 										<p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipommodo consequat.</p>
 										<div class="seremon-meta">
-											<span><i class="fa fa-calendar"></i> <strong>Date:</strong> 05/04/2014</span>
-											<span><i class="fa fa-user"></i> <strong>Pastor:</strong> John Birman</span>
+											<span><i class="fa fa-calendar"></i> <strong>Date:</strong> 05/04/2023</span>
+											<span><i class="fa fa-user"></i> <strong>Pastor:</strong> John Blesson Rowe</span>
 										</div>
 									</li>
 									<li>
-										<h3 class="seremon-title"><a href="#">Labore et dolore magna aliqua</a></h3>
+										<h3 class="seremon-title"><a href="#">Divine Restoration</a></h3>
 										<p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipommodo consequat.</p>
 										<div class="seremon-meta">
-											<span><i class="fa fa-calendar"></i> <strong>Date:</strong> 05/04/2014</span>
-											<span><i class="fa fa-user"></i> <strong>Pastor:</strong> John Birman</span>
+											<span><i class="fa fa-calendar"></i> <strong>Date:</strong> 05/04/2023</span>
+											<span><i class="fa fa-user"></i> <strong>Pastor:</strong> John Blesson Rowe</span>
 										</div>
 									</li>
 								</ul>
@@ -259,28 +272,28 @@
 								<h3 class="section-title">Latest seremons</h3>
 								<ul class="seremon-list">
 									<li>
-										<h3 class="seremon-title"><a href="#">Labore et dolore magna aliqua</a></h3>
+										<h3 class="seremon-title"><a href="#">Divine Power</a></h3>
 										<div class="seremon-meta">
-											<span><i class="fa fa-calendar"></i> <strong>Date:</strong> 05/04/2014</span>
-											<span><i class="fa fa-user"></i> <strong>Pastor:</strong> John Birman</span>
+											<span><i class="fa fa-calendar"></i> <strong>Date:</strong> 05/04/2023</span>
+											<span><i class="fa fa-user"></i> <strong>Pastor:</strong> John Blesson Rowe</span>
 										</div>
 										<a href="#" class="button secondary"><img src="images/icon-headset.png" alt="" class="icon"> Audio record</a>
 										<a href="#" class="button secondary"><img src="images/icon-film.png" alt=""> Video record</a>
 									</li>
 									<li>
-										<h3 class="seremon-title"><a href="#">Labore et dolore magna aliqua</a></h3>
+										<h3 class="seremon-title"><a href="#">Divine Power</a></h3>
 										<div class="seremon-meta">
-											<span><i class="fa fa-calendar"></i> <strong>Date:</strong> 05/04/2014</span>
-											<span><i class="fa fa-user"></i> <strong>Pastor:</strong> John Birman</span>
+											<span><i class="fa fa-calendar"></i> <strong>Date:</strong> 05/04/2023</span>
+											<span><i class="fa fa-user"></i> <strong>Pastor:</strong> John Blesson Rowe</span>
 										</div>
 										<a href="#" class="button secondary"><img src="images/icon-headset.png" alt="" class="icon"> Audio record</a>
 										<a href="#" class="button secondary"><img src="images/icon-film.png" alt=""> Video record</a>
 									</li>
 									<li>
-										<h3 class="seremon-title"><a href="#">Labore et dolore magna aliqua</a></h3>
+										<h3 class="seremon-title"><a href="#">Divine Power</a></h3>
 										<div class="seremon-meta">
-											<span><i class="fa fa-calendar"></i> <strong>Date:</strong> 05/04/2014</span>
-											<span><i class="fa fa-user"></i> <strong>Pastor:</strong> John Birman</span>
+											<span><i class="fa fa-calendar"></i> <strong>Date:</strong> 05/04/2023</span>
+											<span><i class="fa fa-user"></i> <strong>Pastor:</strong> John Blesson Rowe</span>
 										</div>
 										<a href="#" class="button secondary"><img src="images/icon-headset.png" alt="" class="icon"> Audio record</a>
 										<a href="#" class="button secondary"><img src="images/icon-film.png" alt=""> Video record</a>
