--- a/views/index.ejs
+++ b/views/index.ejs
@@ -192,6 +192,14 @@
 						<div class="row">
 							<div class="col-md-3 col-sm-6">
 								<div class="event">
+									<img src="images/worship.jpg" alt="" class="event-image">
+									<h3 class="event-title"><a href="#">Worship with us</a></h3>
+									<div class="event-meta"><span class="date"><i class="fa fa-calendar"></i> Every Sunday & Thursday</span><span class="location"><i class="fa fa-map-marker"></i>Rokupa</span></div>
+									<a href="#" class="button">Get more information</a>
+								</div>
+							</div>
+							<div class="col-md-3 col-sm-6">
+								<div class="event">
 									<img src="images/prayer_fasting.JPG" alt="" class="event-image">
 									<h3 class="event-title"><a href="#">21 Days Prayer and Fasting</a></h3>
 									<div class="event-meta"><span class="date"><i class="fa fa-calendar"></i> 19/10/2023</span><span class="location"><i class="fa fa-map-marker"></i>Rokupa</span></div>
@@ -208,7 +216,7 @@
 							</div>
 							<div class="col-md-3 col-sm-6">
 								<div class="event">
-									<img src="images/event-3.jpg" alt="" class="event-image">
+									<img src="images/childrenkgm.jpg" alt="" class="event-image">
 									<h3 class="event-title"><a href="">Childrens' Thanksgivig Service</a></h3>
 									<div class="event-meta"><span class="date"><i class="fa fa-calendar"></i> 27/11/2023</span><span class="location"><i class="fa fa-map-marker"></i>Rokupa</span></div>
 									<a href="#" class="button">Get more information</a>
@@ -216,7 +224,7 @@
 							</div>
 							<div class="col-md-3 col-sm-6">
 								<div class="event">
-									<img src="images/event-4.jpg" alt="" class="event-image">
+									<img src="images/dinner.jpg" alt="" class="event-image">
 									<h3 class="event-title"><a href="">Couples and Leaders Dinner</a></h3>
 									<div class="event-meta"><span class="date"><i class="fa fa-calendar"></i> 15/12/2023</span><span class="location"><i class="fa fa-map-marker"></i>Rokupa</span></div>
 									<a href="#" class="button">Get more information</a>
@@ -224,7 +232,7 @@
 							</div>
 							<div class="col-md-3 col-sm-6">
 								<div class="event">
-									<img src="images/event-4.jpg" alt="" class="event-image">
+									<img src="images/carol.jpg" alt="" class="event-image">
 									<h3 class="event-title"><a href="">Carol and Praise night</a></h3>
 									<div class="event-meta"><span class="date"><i class="fa fa-calendar"></i> 22/12/2023</span><span class="location"><i class="fa fa-map-marker"></i>Rokupa</span></div>
 									<a href="#" class="button">Get more information</a>
@@ -261,7 +269,7 @@
 										<p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquipommodo consequat.</p>
 										<div class="seremon-meta">
 											<span><i class="fa fa-calendar"></i> <strong>Date:</strong> 05/04/2023</span>
-											<span><i class="fa fa-user"></i> <strong>Pastor:</strong> John Blesson Rowe</span>
+											<span><i class="fa fa-user"></i> <strong>Pastor:</strong> John Blesson Rowe </span>
 										</div>
 									</li>
 								</ul>
@@ -422,10 +430,10 @@
 						</form>
 					</div>
 				</div>
-
-				 <div class="map" data-latitude="-6.897789" data-longitude="107.621735"></div>
+				 <div class="map" data-latitude="8.460044" data-longitude="-13.173857"></div>
 			</main>
 		</div>
+		
 
 		
 
