--- a/views/index.ejs
+++ b/views/index.ejs
@@ -160,18 +160,18 @@
 									<small class="date">Assistance Pastor</small>
 								</div>
 							</div>
+							<!-- <div class="col-md-2 col-sm-3 col-xs-6">
+								<div class="pastor">
+									<img src="images/elderABT.jpg" alt="" class="pastor-image">
+									<h3 class="pastor-name">Elder Edward AB Turay</h3>
+									<small class="date">Head Adminstrator</small>
+								</div>
+							</div> -->
 							<div class="col-md-2 col-sm-3 col-xs-6">
 								<div class="pastor">
 									<img src="images/finnah_koroma.jpg" alt="" class="pastor-image">
 									<h3 class="pastor-name">Evan. Finnah Koroma</h3>
 									<small class="date">Assistance Pastor</small>
-								</div>
-							</div>
-							<div class="col-md-2 col-sm-3 col-xs-6">
-								<div class="pastor">
-									<img src="images/elderABT.jpg" alt="" class="pastor-image">
-									<h3 class="pastor-name">Elder Edward AB Turay</h3>
-									<small class="date">Head Adminstrator</small>
 								</div>
 							</div>
 						</div> <!-- .row -->
@@ -407,7 +407,7 @@
 						<div class="contact-detail">
 							<span><img src="images/icon-marker.png" alt="" class="icon"> 14 Railway Line, Rokupa</span>
 							<span><img src="images/icon-phone.png" alt="" class="icon"> (232) 79969094</span>
-							<span><img src="images/icon-envelope.png" alt="" class="icon"> kingdomgoselmission@gmail.comc</span>
+							<span><img src="images/icon-envelope.png" alt="" class="icon">kingdomgoselmission@gmail.com</span>
 						</div>
 
 						<form class="contact-form" action="contact-form" method="post">
@@ -430,13 +430,10 @@
 						</form>
 					</div>
 				</div>
-				 <div class="map" data-latitude="8.460044" data-longitude="-13.173857"></div>
+				 <!-- <div class="map" data-latitude="8.460044" data-longitude="-13.173857"></div> -->
+				 <div><iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d1514.9227505433091!2d-13.174430397215756!3d8.459177676867808!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e1!3m2!1sen!2ssl!4v1697910576053!5m2!1sen!2ssl" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
 			</main>
 		</div>
-		
-
-		
-
 		<script src="js/jquery-1.11.1.min.js"></script>
 		<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false&amp;language=en"></script>
 		<script src="js/plugins.js"></script>
