--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,15 +13,16 @@
 
 		<!-- Loading main css file -->
 		<link rel="stylesheet" href="css/style.css">
+		<link rel="stylesheet" href="css/map.css">
 		
 		<!--[if lt IE 9]>
 		<script src="js/ie-support/html5.js"></script>
 		<script src="js/ie-support/respond.js"></script>
 		<![endif]-->
-
+			<style>
+			 
+			</style>
 	</head>
-
-
 	<body>
 		<div class="site-content">
 			<div class="site-header header-collapsed">
@@ -160,13 +161,6 @@
 									<small class="date">Assistance Pastor</small>
 								</div>
 							</div>
-							<!-- <div class="col-md-2 col-sm-3 col-xs-6">
-								<div class="pastor">
-									<img src="images/elderABT.jpg" alt="" class="pastor-image">
-									<h3 class="pastor-name">Elder Edward AB Turay</h3>
-									<small class="date">Head Adminstrator</small>
-								</div>
-							</div> -->
 							<div class="col-md-2 col-sm-3 col-xs-6">
 								<div class="pastor">
 									<img src="images/finnah_koroma.jpg" alt="" class="pastor-image">
@@ -174,6 +168,20 @@
 									<small class="date">Assistance Pastor</small>
 								</div>
 							</div>
+							<div class="col-md-2 col-sm-3 col-xs-6">
+								<div class="pastor">
+									<img src="images/elderABT.jpg" alt="" class="pastor-image">
+									<h3 class="pastor-name">Elder Edward AB Turay</h3>
+									<small class="date">Chuurch Administrator</small>
+								</div>
+							</div>
+							<!-- <div class="col-md-2 col-sm-3 col-xs-6">
+								<div class="pastor">
+									<img src="images/elderABT.jpg" alt="" class="pastor-image">
+									<h3 class="pastor-name">Elder Edward AB Turay</h3>
+									<small class="date">Head Adminstrator</small>
+								</div>
+							</div> -->
 						</div> <!-- .row -->
 
 						<div class="text-center">
@@ -402,7 +410,7 @@
 				<div id="contact" class="fullwidth-block" data-bg-color="#4a3173">
 					<div class="container">
 						<h2 class="section-title">Contact us</h2>
-						<p class="section-intro">Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae.</p>
+						<!-- <p class="section-intro">Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae.</p> -->
 
 						<div class="contact-detail">
 							<span><img src="images/icon-marker.png" alt="" class="icon"> 14 Railway Line, Rokupa</span>
@@ -431,7 +439,9 @@
 					</div>
 				</div>
 				 <!-- <div class="map" data-latitude="8.460044" data-longitude="-13.173857"></div> -->
-				 <div><iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d1514.9227505433091!2d-13.174430397215756!3d8.459177676867808!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e1!3m2!1sen!2ssl!4v1697910576053!5m2!1sen!2ssl" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
+				 <div class="map-container">
+					<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d1514.9227505433091!2d-13.174430397215756!3d8.459177676867808!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e1!3m2!1sen!2ssl!4v1697910576053!5m2!1sen!2ssl" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+				</div>
 			</main>
 		</div>
 		<script src="js/jquery-1.11.1.min.js"></script>
