--- a/views/index.ejs
+++ b/views/index.ejs
@@ -413,7 +413,7 @@
 						<!-- <p class="section-intro">Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae.</p> -->
 
 						<div class="contact-detail">
-							<span><img src="images/icon-marker.png" alt="" class="icon"> 14 Railway Line, Rokupa</span>
+							<span><img src="images/icon-marker.png" alt="" class="icon"> 14 Railway Line, Rokupa, Freetown.</span>
 							<span><img src="images/icon-phone.png" alt="" class="icon"> (232) 79969094</span>
 							<span><img src="images/icon-envelope.png" alt="" class="icon">kingdomgoselmission@gmail.com</span>
 						</div>
