--- a/views/index.ejs
+++ b/views/index.ejs
@@ -410,7 +410,10 @@
 				<div id="contact" class="fullwidth-block" data-bg-color="#4a3173">
 					<div class="container">
 						<h2 class="section-title">Contact us</h2>
-						<!-- <p class="section-intro">Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae.</p> -->
+						<p class="section-intro">Our "Contact Us" section is your direct line to us. Whether you have questions, 
+							feedback, or just want to say hello, our user-friendly "Contact Form" is the easiest way to get in touch. 
+							Simply fill in your details and message, and we'll ensure your inquiries are promptly addressed. 
+							We're here to assist you and look forward to hearing from you.</p>
 
 						<div class="contact-detail">
 							<span><img src="images/icon-marker.png" alt="" class="icon"> 14 Railway Line, Rokupa, Freetown.</span>
