--- a/views/index.ejs
+++ b/views/index.ejs
@@ -329,30 +329,30 @@
 
 						<div class="family-list">
 							<figure class="family">
-								<img src="images/family-1.jpg" alt="">
+								<img src="images/sannoh.jpg" alt="">
 								<figcaption>
-									<h3 class="family-name">Harrison</h3>
+									<h3 class="family-name">Sannoh Family</h3>
 									<span class="arrow"></span>
 								</figcaption>
 							</figure>
 							<figure class="family">
-								<img src="images/family-2.jpg" alt="">
+								<img src="images/turay-family.jpg" alt="">
 								<figcaption>
-									<h3 class="family-name">Harrison</h3>
+									<h3 class="family-name">Turay Family</h3>
 									<span class="arrow"></span>
 								</figcaption>
 							</figure>
 							<figure class="family">
-								<img src="images/family-3.jpg" alt="">
-								<figcaption>
-									<h3 class="family-name">Harrison</h3>
-									<span class="arrow"></span>
-								</figcaption>
-							</figure>
+							<img src="images/sia.jpg" alt="">
+							<figcaption>
+								<h3 class="family-name">Fasuluku</h3>
+								<span class="arrow"></span>
+							</figcaption>
+						</figure>
 							<figure class="family">
-								<img src="images/family-4.jpg" alt="">
+								<img src="images/mac.jpg" alt="">
 								<figcaption>
-									<h3 class="family-name">Harrison</h3>
+									<h3 class="family-name">Karim</h3>
 									<span class="arrow"></span>
 								</figcaption>
 							</figure>
