--- a/views/index.ejs
+++ b/views/index.ejs
@@ -57,7 +57,7 @@
 					<li data-bg-image="images/slider-1.jpg">
 						<div class="container">
 							<div class="slide-content">
-								<h1 class="slide-title">Childrens' Thanksgivig</h1>
+								<h1 class="slide-title">Childrens' Thanksgiving</h1>
 								<small class="date">Sunday 27th November 2023</small>
 								<p>The Children of Kingdom Gospel Mission will be celebrating their Annual Thanksgiving.</p>
 								<a href="#" class="button">Get more information</a>
